Content Updates before first Production run
Content Updates before first Production run

--- a/ClotheOurKids.Web/Content/css/style.css
+++ b/ClotheOurKids.Web/Content/css/style.css
@@ -58,6 +58,12 @@
     z-index: 4050;
 }
 
+@media(max-width: 1199px) {
+    .navContainer {
+        margin-bottom: 5px;
+    }
+}
+
 
 @media only screen and (max-width: 768px) {
     .page-top-section .section-heading {
