--- a/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/GetInvolved.cshtml
@@ -62,7 +62,7 @@
                     <h4>Donate Items</h4>
                     <p>
                         We rely on the clothing and shoe donations from our community.
-                        We accept sizes 4t-Adult (we only ask that adult clothing be appropriate for teenagers).
+                        We accept sizes 4T-Adult (we only ask that adult clothing be appropriate for teenagers).
                         We also love getting new packs of socks and underwear as well as products for our hygiene Kits.
                     </p>
                 </div>
@@ -204,7 +204,6 @@
 
 </div>
 
-
 @section customScript
 {
     <script type="text/javascript">
@@ -213,7 +212,7 @@
                 FB.ui({
                     method: 'share',
                     mobile_iframe: true,
-                    href: 'https://localhost:44320//What-We-Give',
+                    href: 'https://www.givekidsclothes.com/Get-Involved',
                 }, function (response) { });
             });
         });
