--- a/ClotheOurKids.Web/Views/Donation/Give.cshtml
+++ b/ClotheOurKids.Web/Views/Donation/Give.cshtml
@@ -38,7 +38,7 @@
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Give Funds</h1>
 
         <p class="section-description wow fadein" data-wow-delay="0.4s">
-            We use all the funds that we receive to help give clothes to children.
+            Your financial donations are needed to ensure we can continue clothing the children in need in our communities.
             <br />
             <a href="http://www.lifewayegiving.org/dl/?uid=ClotP.O.210" class="btn btn-small btn-primary btn-rounded mt-1">Donate Now</a>
         </p>
@@ -53,13 +53,8 @@
         <h1 class="section-heading wow fadeIn" data-wow-delay="0.2s">Give Clothes</h1>
 
         <p class="section-description wow fadein" data-wow-delay="0.4s">
-            We give kids the clothes that we get as donatons from <strong>our community</strong>!
-            We always need a large supply of clothes because we want to give each child enough outfits to span the entire week.
-            <br />
-            To help in collecting these clothes, we have set up drop-off locations at many schools, churches, and businesses around Morgan County.
-            <br />
-            <br />
-            Take a look at the map below and find the drop-off location closest to you!
+            We rely on the clothing and shoe donations from our community. We accept sizes 4T-Adult (we only ask that adult clothing be appropriate for teenagers). 
+            We also love getting new packs of socks and underwear as well as products for our hygiene Kits. 
         </p>
 
         
