--- a/ClotheOurKids.Web/Views/Shared/Offline.cshtml
+++ b/ClotheOurKids.Web/Views/Shared/Offline.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Clothe Our Kids of Morgan County</title>
+    <title>Clothe Our Kids of North Alabama</title>
 
     @Styles.Render("~/bundles/css")
 
