--- a/ClotheOurKids.Web/Views/AboutUs/Leadership.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/Leadership.cshtml
@@ -14,14 +14,10 @@
                 <a id="FBShare" type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
 
                 <!--Twitter-->
-                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FWhat-We-Do&hashtags=givekidsclothes&text=Find%20out%20what%20we%20give%20to%20kids%20in%20need."
+                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FLeadership&hashtags=givekidsclothes&text=Learn+about+the+people+behind+this+organization."
                    type="button" class="btn-floating btn-small btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
-
-                <!--Email-->
-                <a type="button" class="btn-floating btn-small btn-email"><i class="fa fa-envelope"></i></a>
-
             </div>
         </div>
     </section>
@@ -42,9 +38,9 @@
             <!--First column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                @*<div class="avatar">
-                    <img src="~/Content/img/brandi.jpg" class="rounded-circle">
-                </div>*@
+                <div class="avatar">
+                    <img src="~/Content/img/ClotheOurKids/Brandi_scaled.JPG" class="rounded-circle"/>
+                </div>
                 <h4>Brandi Breeden</h4>
                 <h5>President / Co-Founder</h5>
                 <p>Brandi is the life and soul of our organization. She pours herself into the day to day operations, administrative tasks, outreach, and vision of Clothe Our Kids of North Alabama.</p>
@@ -54,9 +50,9 @@
             <!--Second column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                @*<div class="avatar">
-                    <img src="~/Content/img/perry.jpg" class="rounded-circle img-fluid">
-                </div>*@
+                <div class="avatar">
+                    <img src="~/Content/img/ClotheOurKids/comingSoon_scaled.jpg" class="rounded-circle">
+                </div>
                 <h4>Perry Jeffers</h4>
                 <h5>Vice President</h5>
                 <p>Perry serves as our Vice President. He dedicates his time to assist Brandi with many day to day activities as well as offering guidance and wisdom in the vision and planning of our operations.</p>
@@ -66,9 +62,9 @@
             <!--Third column-->
             <div class="col-lg-4 col-md-12 mb-r">
 
-                @*<div class="avatar">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle">
-                </div>*@
+                <div class="avatar">
+                    <img src="~/Content/img/ClotheOurKids/Michael_scaled.JPG" class="rounded-circle"/>
+                </div>
                 <h4>Michael Breeden</h4>
                 <h5>Secretary / Treasurer / Co-Founder</h5>
                 <p>Michael serves as our Secretary and Treasurer. He helps out with the day to day activities as often as possible, but the majority of his work happens behind the scenes. He dedicates his time after his day job to building and maintaining our website.</p>
@@ -102,3 +98,19 @@
     </section>
     <!--/Section-->
 </div>
+
+
+@section customScript
+{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#FBShare').click(function () {
+                FB.ui({
+                    method: 'share',
+                    mobile_iframe: true,
+                    href: 'https://www.givekidsclothes.com/Leadership',
+                }, function (response) { });
+            });
+        });
+    </script>
+}
