--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 border: 0;
                 margin-bottom: 5px;
             }
-        }*
+        }
 
         .full-bg-img {
             color: #fff;
@@ -82,11 +82,11 @@
 {
 
     <!--Mask-->
-    <div class="view hm-black-strong">
+    <div class="view hm-black-strong d-flex justify-content-center">
         <div class="full-bg-img flex-center align-items-center justify-content-md-start justify-content-sm-center" id="home">
             <ul class="text-center ml-5">
                 <li>
-                    <h1 class="h1-responsive wow fadeInUp">Clothe Our Kids of Morgan County</h1>
+                    <h1 class="h1-responsive wow fadeInUp">Clothe Our Kids of North Alabama</h1>
                 </li>
                 <li>
                     <p class="wow fadeInUp" data-wow-delay="0.2s">Giving Clothes. Showing Love. Building Confidence.</p>
@@ -95,14 +95,17 @@
                     <a href="@Url.RouteUrl("GetInvolved")" class="btn btn-outline-white btn-lg wow fadeInLeft" data-wow-delay="0.2s"><i class="fa fa-user left"></i> Get involved!</a>
                     <a href="@Url.RouteUrl("OurWork")" class="btn btn-outline-white btn-lg wow fadeInRight" data-wow-delay="0.2s"><i class="fa fa-book left"></i>Learn more</a>
                 </li>
-            </ul>
-            @*<div class="d-flex align-self-end justify-content-center">
-                    <i class="fa fa-angle-down fa-5x"></i>
-                </div>*@
-        </div>
+            </ul>            
+        </div>  
         
+        <div class="d-flex align-self-end justify-content-center mb-1">
+            <i class="fa fa-angle-down fa-5x white-text" style="z-index: 5000;"></i>
+        </div>
     </div>
     <!--/.Mask-->
+
+    
+
 }
 
 <!-- Main container-->
@@ -133,7 +136,8 @@
 
 <div id="RequestStreak" class="streak bg-light-green white-text" style="width: 100%;">
     <div class="flex-center">
-        <h1 class="wow fadeIn"><span id="RequestCount">0</span> Kids Clothed</h1>            
+        @*<h1 class="wow fadeIn"><span id="RequestCount">0</span> Kids Clothed</h1>*@            
+        <h1 class="wow fadeIn"><span id="RequestCount" class="count">@Model.RequestCount</span> Kids Clothed</h1> 
     </div>
 </div>
 
@@ -161,6 +165,9 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12 mt-2 hidden-sm-up"></div>
+
             <div id="GetInvolved" class="col mr-2">
                 <div class="card card-cascade bg-light-blue" style="height: 100%;">
                     <div class="card-block text-center">
@@ -175,6 +182,9 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12 mt-2 hidden-sm-up"></div>
+
             <div id="Donate" class="col">
                 <div class="card card-cascade bg-yellow" style="height: 100%;">
                     <div class="card-block text-center">
@@ -246,7 +256,7 @@
             var var_location = new google.maps.LatLng(34.528204, -86.898599);
 
             var locations = [
-                ['Clothe Our Kids of Morgan County', 34.528204, -86.898599, '317 AL-67, Decatur, AL 35603', '256-887-5437']
+                ['Clothe Our Kids of North Alabama', 34.528204, -86.898599, '317 AL-67, Decatur, AL 35603', '256-887-5437']
             ];
 
             var map = new google.maps.Map(document.getElementById("map"), {
@@ -319,13 +329,21 @@
             var requestCount = @Model.RequestCount;
             var comma_separator_number_step = $.animateNumber.numberStepFactories.separator(',');
             var direction = 'down';
+
+            var test = $('#RequestCount').prop('Counter');
+
             var waypoint = $('#RequestStreak').waypoint(function (direction) {
-                $('#RequestCount').animateNumber(
-                    {
-                        number: requestCount,
-                        numberStep: comma_separator_number_step
-                    }
-                );
+                $('.count').each(function () {
+                    $(this).prop('Counter', 0).animate({
+                        Counter: @Model.RequestCount
+                    }, {
+                            duration: 3000,
+                            easing: 'swing',
+                            step: function (now) {
+                                $(this).text(Math.ceil(now));
+                            }
+                        });
+                });
             },
             {
                 offset: 'bottom-in-view'
