--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -13,7 +13,7 @@
                 <a id="FBShare" type="button" class="btn-floating btn-small btn-fb"><i class="fa fa-facebook"></i></a>
 
                 <!--Twitter-->
-                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FWhat-We-Give&hashtags=givekidsclothes&text=Learn%20what%20we%20do."
+                <a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fgivekidsclothes.com%2FOur-Work&hashtags=givekidsclothes&text=Learn%20what%20we%20do."
                    type="button" class="btn-floating btn-small btn-tw">
                     <i class="fa fa-twitter"></i>
                 </a>
@@ -387,7 +387,7 @@
                 FB.ui({
                     method: 'share',
                     mobile_iframe: true,
-                    href: 'https://localhost:44320//Our-Work',
+                    href: 'https://www.givekidsclothes.com/Our-Work',
                 }, function (response) { });
             });
         });
