Fix CSS Bundle to Support Image URLS
Fix CSS Bundle to Support Image URLS

--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeAre.cshtml
@@ -44,9 +44,16 @@
             When moving back home to Alabama after living in Tennessee for 3 years both felt a calling to do more in their community. 
         </p>
         <p class="section-description text-left">
-            After hearing about a Clothe Our Kids operating in Lincoln County, TN they met with founder Laura Meyer and learned how they operated and served the children in their community.
+            After hearing about a Clothe Our Kids operating in Lincoln County, TN they met with founder Laura Mayer and learned how they operated and served the children in their community.
             They saw that Morgan County had a gap for providing clothing to children within the school systems who are in need.
             Michael and Brandi went straight to work to form the organization previously known as Clothe Our Kids of Morgan County.
+        </p>
+
+        <p class="section-description text-left">
+            After growing out of a church classroom they were provided with a trailer by Morgan County Superintendent Bill Hopkins which is located behind Priceville Junior High School where they currently operate today. 
+            Due to the overwhelming response and outpouring of love from the community Clothe Our Kids of Morgan County has now expanded into Lawrence County and also serves children through Save-A-Life, Casa, and PACT. 
+            This brought on a change of name to Clothe Our Kids of North Alabama. 
+            A new gap was also discovered and they are now providing not only clothing but hygiene kits as well.  
         </p>
 
         <p class="section-description text-left">
