--- a/ClotheOurKids.Web/Views/AboutUs/WhoWeServe.cshtml
+++ b/ClotheOurKids.Web/Views/AboutUs/WhoWeServe.cshtml
@@ -45,7 +45,7 @@
 
     <hr class="between-sections">
 
-    <section class="section">
+    <section class="section hidden-xl-down">
 
         <h1 class="section-heading">Locations We Serve</h1>
 
@@ -59,7 +59,7 @@
 </div>
 
 
-@section scripts
+@*@section scripts
 {
     <script type="text/javascript">
         function initMap() {
@@ -115,7 +115,7 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2xc4rPas-4JZpu2txBdfWUtKXASh2O1k&callback=initMap">
     </script>
-}
+}*@
 
 @section customScript
 {
