--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -41,6 +41,17 @@
             background-color: #7E929C;
         }
 
+        .card.card-cascade {
+            height: 100%;
+            display: flex;
+        }
+
+        .card.card-cascade .card-block {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+        }
+
         #OurWork {
             cursor: pointer;
             cursor: hand;
