--- a/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
+++ b/ClotheOurKids.Web/Views/OurWork/OurWork.cshtml
@@ -204,6 +204,27 @@
                 <!--/Collection card-->
             </div>
             <!--/Sixth column-->
+            <!--Seventh column-->
+            <div class="col-6 col-lg-3 col-sm-4 mb-r wow fadeInUp" data-wow-delay="0.2s">
+
+                <!--Collection card-->
+                <div class="card collection-card z-depth-1-half">
+                    <!--Card image-->
+                    <div class="view hm-black-light hm-zoom">
+                        <img src="~/Content/img/toothbrush_blue.jpeg" class="img-fluid" alt="" />
+                        <div class="mask">
+                            <div class="stripe light">
+                                <a>
+                                    <p>Hygiene Kit</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/Card image-->
+                </div>
+                <!--/Collection card-->
+            </div>
+            <!--/Seventh column-->
         </div>
         <!--/First row-->
 
