Add view request page
Add view request page

--- a/ClotheOurKids.Web/Views/Home/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿@model ClotheOurKids.Web.Models.ViewModel.HomeViewModel
 
-@section pageCSS
+@section openGraph {
+    <meta property="og:url" content="https://www.givekidsclothes.com" />
+    <meta property="og:image" content="https://www.givekidsclothes.com/Content/img/logo/ClotheOurKidsLogo_withNA.png" />
+    <meta property="og:title" content="Clothe Our Kids of North Alabama" />
+    <meta property="og:type" content="website" />
+}
+      @section pageCSS
 {
     <style>
         html,
