--- a/ClotheOurKids.Web/Views/Manage/Index.cshtml
+++ b/ClotheOurKids.Web/Views/Manage/Index.cshtml
@@ -23,3 +23,12 @@
         </dd>
     </dl>
 </div>
+<div>
+    <h4>View your requests</h4>
+    <hr />
+    <ul>
+        <li>
+            @Html.ActionLink("View Requests", "ViewRequests", "RequestClothes")
+        </li>
+    </ul>
+</div>
